fixed issued with image pathing causing it to not show on mobile layout

--- a/global.scss
+++ b/global.scss
@@ -14,7 +14,7 @@ body {
 
 .scroll-block{
   overflow: hidden;
-  
+
 }
 
 .down-arrow{
@@ -389,6 +389,7 @@ flex-direction: column;
     width: 100px;
     z-index: 999;
     cursor: pointer;
+   
   }
   .carousel-prev-span.hide, .carousel-next-span.hide{
    display: none;
@@ -681,7 +682,7 @@ flex-direction: column;
         width: 50px;
         display: block;
         position: absolute;
-        background: url('/images/icon-hamburger.svg');
+        background: url('./images/icon-hamburger.svg');
         background-repeat: no-repeat;
         aspect-ratio: 1;
         z-index: 9999;
@@ -692,7 +693,7 @@ flex-direction: column;
     }
 
     .mobile-nav-toggle.toggled {
-        background: url('/images/icon-close.svg');
+        background: url('./images/icon-close.svg');
         background-repeat: no-repeat;
         aspect-ratio: 1;
     }
@@ -747,7 +748,9 @@ flex-direction: column;
   }
   
 .carousel{
-  overflow: scroll;
+  // overflow: scroll;
+  overflow-y: hidden;
+  scrollbar-width: thin;
 }
   .carousel-prev-span, .carousel-next-span{
     display: none;
@@ -822,70 +825,91 @@ flex-direction: column;
             
             
             .image-holder {
-              white-space: wrap;
-              overflow: hidden;
-              position: relative;
-              font-size: 1.3rem;
-              text-decoration: underline;
-             .p-holder{
-              margin-top: .5rem;
-              cursor: pointer;
-              p{
-                margin-top: 0;
-                margin-bottom: 1rem;
-                max-width: 100%;
-            
-              }
-            }
-              .anime-image {
-                height: 350px;
-                min-width: 100%;
-        
-                transition: transform 0.3s ease;
-              }
-            
-              .hover-blur {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                background-color: rgba(0, 0, 0, .7);
-                min-height: 350px;
-                min-width: 100%;
-                position: absolute;
-                top: 0;
-                cursor: pointer;
-                left: 0;
-                opacity: 0;
-                transition: transform 0.3s ease;
-            
-                a {
-                  width: 150px;
-                  height: 150px;
-            
-                  img {
-                    max-width: 100%;
-                    max-height: 100%;
-                  }
-                }
-            
-                a:hover {
-                  cursor: pointer;
-                }
-              }
-            }
-            .hover-blur:hover{
-              opacity: 1;
-            }
-            
-            
-         
-            
+        white-space: wrap;
+        overflow: hidden;
+        position: relative;
+        font-size: 1.3rem;
+        text-decoration: underline;
+        width:100%;
+        transition: transform  0.5s ease-in-out;
+        animation: slideUp 0.5s ease-in-out;
+        .p-holder{
+        margin-top: .5rem;
+        p{
+          margin-top: 0;
+          margin-bottom: 1rem;
+          max-width: 100%;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+      }
+    }
+        .anime-image {
+          height: 350px;
+          min-width: 100%;
+  
+          transition: transform 0.3s slideUp;
         }
+      
+        .hover-blur {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          background-color: rgba(0, 0, 0, .7);
+          min-height: 350px;
+          min-width: 100%;
+          position: absolute;
+          top: 0;
+          cursor: pointer;
+          left: 0;
+          opacity: 0;
+          transition: transform 0.3s ease;
+      
+          a {
+            width: 150px;
+            height: 150px;
+      
+            img {
+              max-width: 100%;
+              max-height: 100%;
+            }
+          }
+      
+          a:hover {
+            cursor: pointer;
+          }
+        }
+      }
+      .hover-blur:hover{
+        opacity: 1;
+      }
+      
+    
+    }
+    
+    .meta-data{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    
+    .rating-div{
+      color: rgb(255, 226, 62);
+    }
+    
+.fa-solid.fa-circle{
+  font-size: .9rem;
+  padding-right: .3rem;
+}
 }
 
 
-
+@media (min-width:1200px) {
+  .off-screen-blur{
+    opacity: .2;
+  }
+}
 
 
 
@@ -965,8 +989,7 @@ flex-direction: column;
   padding: .5rem;
   background-color: rgb(23, 23, 23);
   border-radius: 6px;
-  // background-color: darkslategrey;
-  // max-width: 30%;
+
   font-size: .8rem;
 }
       
